# zeroquant

./: .dockerignore  .env.collector.optimized  .env.example  .gitignore  .rustfmt.toml  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.ml  README.md  clippy.toml  docker-compose.yml  podman-compose.ps1  podman-compose.sh  pyproject.toml  strategies_test.json
crates/trader-analytics/: Cargo.toml
crates/trader-analytics/src/: analytics_provider_impl.rs  correlation.rs  global_scorer.rs  journal_integration.rs  lib.rs  liquidity_gate.rs  market_regime_calculator.rs  multi_timeframe_helpers.rs  route_state_calculator.rs  sector_rs.rs  seven_factor.rs  structural_features.rs  survival.rs  timeframe_alignment.rs  trigger_calculator.rs  volume_profile.rs
crates/trader-analytics/src/backtest/: engine.rs  mod.rs  slippage.rs
crates/trader-analytics/src/indicators/: candle_patterns.rs  hma.rs  mod.rs  momentum.rs  obv.rs  structural.rs  supertrend.rs  trend.rs  volatility.rs  volume.rs  weekly_ma.rs
crates/trader-analytics/src/ml/: error.rs  features.rs  mod.rs  pattern.rs  predictor.rs  service.rs  types.rs
crates/trader-analytics/src/performance/: metrics.rs  mod.rs  tracker.rs
crates/trader-analytics/src/portfolio/: charts.rs  equity_curve.rs  mod.rs
crates/trader-analytics/tests/: backtest_integration.rs  multi_timeframe_perf.rs  strategy_integration.rs  ttm_squeeze_test.rs
crates/trader-api/: Cargo.toml
crates/trader-api/examples/: reality_check_demo.rs
crates/trader-api/src/: error.rs  lib.rs  main.rs  metrics.rs  openapi.rs  state.rs
crates/trader-api/src/auth/: jwt.rs  middleware.rs  mod.rs  password.rs  roles.rs
crates/trader-api/src/cache/: mod.rs  structural.rs
crates/trader-api/src/middleware/: metrics.rs  mod.rs  rate_limit.rs
crates/trader-api/src/monitoring/: error_tracker.rs  mod.rs
crates/trader-api/src/repository/: backtest_results.rs  cost_basis.rs  credentials.rs  equity_history.rs  execution_cache.rs  global_score.rs  journal.rs  klines.rs  mod.rs  orders.rs  positions.rs  reality_check.rs  score_history.rs  screening.rs  signal_alert_rule.rs  signal_marker.rs  strategies.rs  symbol_fundamental.rs  symbol_info.rs  watchlist.rs
crates/trader-api/src/routes/: analytics.rs  backtest.rs  backtest_results.rs  credentials.rs  dataset.rs  equity_history.rs  health.rs  journal.rs  market.rs  ml.rs  mod.rs  monitoring.rs  notifications.rs  orders.rs  patterns.rs  portfolio.rs  positions.rs  ranking.rs  reality_check.rs  schema.rs  screening.rs  signal_alerts.rs  signals.rs  simulation.rs  strategies.rs  watchlist.rs
crates/trader-api/src/services/: context_sync.rs  mod.rs  signal_alert.rs  telegram_bot.rs
crates/trader-api/src/tasks/: eod_csv_sync.rs  fundamental.rs  krx_csv_sync.rs  mod.rs
crates/trader-api/src/types/: mod.rs  strategy_type.rs
crates/trader-api/src/utils/: format.rs
crates/trader-api/src/websocket/: aggregator.rs  handler.rs  messages.rs  mod.rs  simulator.rs  subscriptions.rs
crates/trader-cli/: Cargo.toml
crates/trader-cli/src/: lib.rs  main.rs
crates/trader-cli/src/commands/: backtest.rs  download.rs  fetch_symbols.rs  health.rs  import.rs  list_symbols.rs  mod.rs
crates/trader-collector/: .env.example  Cargo.toml  README.md
crates/trader-collector/src/: config.rs  error.rs  lib.rs  main.rs  stats.rs
crates/trader-collector/src/modules/: checkpoint.rs  fundamental_sync.rs  global_score_sync.rs  indicator_sync.rs  mod.rs  ohlcv_collect.rs  screening_refresh.rs  symbol_sync.rs
crates/trader-core/: Cargo.toml
crates/trader-core/bindings/sdui/: FieldSchema.ts  FieldType.ts  FragmentRef.ts  SchemaFragment.ts
crates/trader-core/src/: config.rs  crypto.rs  error.rs  lib.rs  logging.rs
crates/trader-core/src/domain/: alert.rs  analytics_provider.rs  calculations.rs  context.rs  exchange_provider.rs  macro_environment.rs  market_breadth.rs  market_data.rs  market_regime.rs  mod.rs  order.rs  position.rs  route_state.rs  schema.rs  signal.rs  statistics.rs  tick_size.rs  trade.rs  trigger.rs
crates/trader-core/src/types/: decimal.rs  mod.rs  symbol.rs  timeframe.rs
crates/trader-core/tests/: trade_info_integration.rs
crates/trader-data/: Cargo.toml
crates/trader-data/src/: error.rs  lib.rs  manager.rs  market_breadth.rs
crates/trader-data/src/cache/: fundamental.rs  historical.rs  macro_data.rs  mod.rs
crates/trader-data/src/provider/: krx_api.rs  mod.rs  naver.rs  symbol_info.rs
crates/trader-data/src/storage/: krx.rs  mod.rs  ohlcv.rs  redis.rs  timescale.rs  yahoo_cache.rs
crates/trader-exchange/: Cargo.toml
crates/trader-exchange/src/: circuit_breaker.rs  error.rs  historical.rs  lib.rs  stream.rs  traits.rs  yahoo.rs
crates/trader-exchange/src/connector/: binance.rs  mod.rs
crates/trader-exchange/src/provider/: binance.rs  kis_kr.rs  kis_us.rs  mod.rs
crates/trader-exchange/src/simulated/: data_feed.rs  exchange.rs  matching_engine.rs  mod.rs  stream.rs
crates/trader-exchange/src/websocket/: mod.rs  stream.rs
crates/trader-exchange/tests/: data_feed_integration.rs
crates/trader-execution/: Cargo.toml
crates/trader-execution/src/: executor.rs  lib.rs  order_manager.rs  position_tracker.rs
crates/trader-notification/: Cargo.toml
crates/trader-notification/src/: bot_handler.rs  lib.rs  telegram.rs  types.rs
crates/trader-strategy/: Cargo.toml
crates/trader-strategy/src/: engine.rs  lib.rs  macros.rs  registry.rs  schema_composer.rs  schema_registry.rs  traits.rs
crates/trader-strategy/src/plugin/: loader.rs  mod.rs
crates/trader-strategy/src/strategies/: all_weather.rs  asset_allocation.rs  baa.rs  bollinger.rs  candle_pattern.rs  compound_momentum.rs  grid.rs  (+31 more)
crates/trader-strategy/tests/: asset_allocation_test.rs  candle_pattern_test.rs  compound_momentum_test.rs  day_trading_test.rs  infinity_bot_test.rs  market_bothside_test.rs  mean_reversion_test.rs  momentum_power_test.rs  momentum_surge_test.rs  pension_bot_test.rs  range_trading_test.rs  rotation_test.rs  rsi_multi_tf_test.rs  sector_vb_test.rs  small_cap_quant_test.rs  us_3x_leverage_test.rs
(+206 files in other folders)
