[package]
name = "trader-cli"
description = "CLI tools for the trading bot"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "trader"
path = "src/main.rs"

[dependencies]
trader-core = { path = "../trader-core" }
trader-exchange = { path = "../trader-exchange" }
trader-strategy = { path = "../trader-strategy" }
trader-data = { path = "../trader-data" }
trader-analytics = { path = "../trader-analytics" }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

# CLI
clap = { version = "4", features = ["derive"] }

# Configuration
config = { workspace = true }
dotenvy = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# HTTP client (for data download)
reqwest = { workspace = true }

# Date/Time
chrono = { workspace = true }

# Numeric types
rust_decimal = { workspace = true }

# UUID
uuid = { workspace = true }

# Progress indication
indicatif = "0.17"

# ML Runtime (optional)
ort = { workspace = true, optional = true }

[features]
default = []
ml = ["ort", "trader-analytics/ml"]  # ML 추론 기능

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
