[package]
name = "trader-core"
description = "Core domain models and types for the trading bot"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Numeric types
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }

# Date/Time
chrono = { workspace = true }

# UUID
uuid = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Async
async-trait = { workspace = true }

# Configuration
config = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Encryption
aes-gcm = { workspace = true }
base64 = { workspace = true }
secrecy = { workspace = true }
rand = { workspace = true }

# Database (optional)
sqlx = { workspace = true, optional = true }

[features]
default = []
sqlx-support = ["sqlx"]

[dev-dependencies]
proptest = { workspace = true }
tokio = { workspace = true }
